#669 update all deps (#931)
* Upgrade to Gradle 8.10 and JDK 21
* Upgrade all our dependencies
* Upgrade google checkstyle

Co-authored-by: Alyssa Hursh <15177211+alyssahursh@users.noreply.github.com>
Co-authored-by: yezr <8996546+yezr@users.noreply.github.com>